--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="app.css" rel="stylesheet">
   </head>
   <body>
-    <div id='root-app'></div>
-    <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
+    <div id='app'></div>
+    <script type="text/javascript" src="app.js" charset="utf-8"></script>
   </body>
 </html>
